[project]
name = "podman-secret-infisical"
version = "0.1.0"
description = "Fetch Infisical secrets into Podman containers via the shell secret driver"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.38.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0",
    "rich>=14.0.0",
    "typer>=0.15.0",
]

[project.scripts]
psi = "psi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["psi"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.1a7",
]
